RELEASE 1.1.0: Using SIMEX 0.7.5
